--- a/src/pages/FaqPage/FaqPage.css
+++ b/src/pages/FaqPage/FaqPage.css
@@ -27,4 +27,11 @@ button {
     align-items: center;
     justify-content: space-between;
     padding: 0 12px;
+}   
+
+.content {
+  display: none;
+}
+.content.show {
+  display: block;
 }
